# nomad-inl-base

./: .cruft.json  .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml  pyproject.toml.rej  requirements_docs.txt
.github/workflows/: actions.yml  mkdocs-deploy.yml  publish.yml
docs/: index.md
docs/explanation/: explanation.md
docs/how_to/: contribute_to_this_plugin.md  install_this_plugin.md  use_this_plugin.md
docs/reference/: analysis.md  batteries.md  characterization.md  entities.md  meteor.md  references.md  sputtering.md  testo.md  wet_deposition.md
docs/tutorial/: tutorial.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: analysis.html  batteries.html  characterization.html  entities.html  meteor.html  references.html  sputtering.html  testo.html  wet_deposition.html
search/: search_index.json
src/nomad_inl_base/: utils.py
src/nomad_inl_base/actions/: __init__.py
src/nomad_inl_base/actions/simple_action/: __init__.py  activities.py  workflows.py
src/nomad_inl_base/analysis/: __init__.py  analysis_source.py  schema.py
src/nomad_inl_base/parsers/: __init__.py  __init__.py.rej  parser.py
src/nomad_inl_base/schema_packages/: __init__.py  afm.py  annealing.py  batteries.py  characterization.py  cleaning.py  crystaLLM.py  crystallm_cif.py  cyclic_voltammetry.py  entities.py  meteor.py  schema_package.py  star.py  testo.py  wet_deposition.py
tests/: conftest.py  test_utils.py
tests/actions/: test_action.py
tests/data/: STAR LAB_44675156_2026_07_22_09_42_20.vi2  SUPPORT_44674288_2026_07_22_09_51_16.vi2  Sample_IV Graph.txt  Sample_Results Table.txt  sample 4pp.xlsx  sample EIS.mpr  sample EQE.txt  sample gdoes.txt  sample.xrdml  test.archive.yaml
tests/data/schemas/: cleaning.archive.yaml  spin_coating.archive.yaml  substrate.archive.yaml  thinfilm.archive.yaml
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
